--- a/entity/plugin.yml
+++ b/entity/plugin.yml
@@ -1,8 +1,7 @@
 main : com.boyboy0710.entity.Main
 name : entity
-version : 1.1.0
+version : 1.2.0
 api-version : 1.16
 
 commands:
-  spawn_king_zombie:
-  p:
+  spawn:
